'2019-1-11路由，sass，px2rem'

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,25 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>vue3-demo</title>
   </head>
+  <script type="text/javascript">
+    // function setFontSize(){
+    //   var winWidth = window.innerWidth;
+    //   var size = (winWidth / 750) * 100;//50
+    //   document.documentElement.style.fontSize = size + 'px';
+    // }
+    // window.onload = function() {
+    //   setFontSize()
+    // }
+    // window.onresize = function() {
+    //   setFontSize()
+    // }
+    // var evt = 'onorientationchange' in window ? 'orientationchange' : 'resize';
+    // var timer = null;
+    // window.addEventListener(evt, function () {
+    //   clearTimeout(timer);
+    //   timer = setTimeout(setFontSize, 300);
+    // }, false);
+  </script>
   <body>
     <noscript>
       <strong>We're sorry but vue3-demo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
